--- a/.coveragerc
+++ b/.coveragerc
@@ -7,3 +7,9 @@ omit =
     */venv/*
     */home/travis/virtualenv/*
     */mymodule/tests/*
+    */api/config/*
+    */api/controllers/*
+    */api/models/*
+    */api/__init__.py
+    */api/tests/__init__.py
+    *run.py
